--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Document</title>
+    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <p>Yaojie was here again.</p>
+    <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light">
+            <a href="#" class="navbar-brand">COMZONE</a>
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#toggleMobileMenu"
+                    aria-controls="toggleMobleMenu"
+                    aria-expanded="false"
+                    aria-lale="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="toggleMobileMenu">
+                <ul>
+                    <li>
+                        <a href="#" class="nav-link"></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
