--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                <ul class="navbar-nav ms-auto text-center">
+                <ul class="navbar-nav ms-auto text-center ">
                     <li><a href="#" class="nav-link">Shop</a></li>
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
@@ -79,5 +79,48 @@
         </a>
     </div>
     <!-- CAROUSEL BAR: END -->
+
+
+    <!-- TOP PRODUCTS: START -->
+    <div class="container">
+        <h1>TOP PRODUCTS</h1>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt tellus bibendum lorem interdum, vitae lobortis risus volutpat. Integer porta dui sit amet magna faucibus, auctor pretium augue auctor. Quisque malesuada dolor a cursus pretium. Cras consequat ornare metus vitae commodo. Cras iaculis a arcu id porta. Maecenas malesuada nunc velit, quis posuere elit tincidunt et. Etiam aliquam ac ex ac molestie.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt tellus bibendum lorem interdum, vitae lobortis risus volutpat. Integer porta dui sit amet magna faucibus, auctor pretium augue auctor. Quisque malesuada dolor a cursus pretium. Cras consequat ornare metus vitae commodo. Cras iaculis a arcu id porta. Maecenas malesuada nunc velit, quis posuere elit tincidunt et. Etiam aliquam ac ex ac molestie.
+        </p>
+        <p>
+            Pellentesque in lacus tellus. Sed tempus nisi ut tempor facilisis. Donec eu lacinia enim. Duis suscipit felis id nibh condimentum ultricies quis eu velit. Praesent eleifend malesuada arcu quis tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas convallis, dui aliquet tristique dictum, tellus leo dapibus purus, imperdiet tempor mi erat eget mi. Nullam urna tortor, vehicula sit amet ultrices et, porttitor ut leo. Mauris eu odio diam. Morbi maximus ligula sit amet ante accumsan faucibus.
+        </p>
+        <p>
+            Pellentesque in lacus tellus. Sed tempus nisi ut tempor facilisis. Donec eu lacinia enim. Duis suscipit felis id nibh condimentum ultricies quis eu velit. Praesent eleifend malesuada arcu quis tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas convallis, dui aliquet tristique dictum, tellus leo dapibus purus, imperdiet tempor mi erat eget mi. Nullam urna tortor, vehicula sit amet ultrices et, porttitor ut leo. Mauris eu odio diam. Morbi maximus ligula sit amet ante accumsan faucibus.
+        </p>
+    </div>
+    <!-- TOP PRODUCTS: END -->
+
+
+    <!-- FOOTER: START -->
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row text-md-left">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
+                    </p>
+                </div>
+                <div class="col-md2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h5 class="mb-4 font-weight-bold">MENU</h5>
+                    <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
+                    <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
+                    <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
+                    <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- FOOTER: END -->
 </body>
 </html>
