--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- NAVIGATION BAR: START -->
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light py-2">
-            <a href="#" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
+            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
             <button
                     class="navbar-toggler"
                     type="button"
@@ -111,16 +111,39 @@
                     </p>
                 </div>
                 <div class="col-md2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="mb-4 font-weight-bold">MENU</h5>
+                    <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
                 </div>
+                <div class="col-md5 col-lg-5 col-xl-5 mx-auto mt-3">
+                    <h5 class="mb-4 ">CONTACT US</h5>
+                    <p>
+                        Blk 31, Ngee Ann Polytechnic <br>
+                        535 Clementi Rd, Singapore 599489
+                    </p>
+                    <p><a href="#" class="text-white">>EMAIL ADDRESS HERE<</a></p>
+                    <p>>SOCIAL MEDIA LINKS HERE<</p>
+                </div>
+            </div>
+            <hr class="mb-4">
+            <div class="row align-items-center">
+                <div class="col-md-7 col-lg-8">
+                    <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
+                    <span style="font-size: 12px;">DESIGNED BY XIAO YAOJIE & SHUQRI SHAIFUDDIN</span>
+                </div>
+                <div class="col-md-5 col-lg-4 mt-3">
+                    <div class="text-center text-md-right">
+                        <span>
+                            <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
+                            <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
+                        </span>
+                    </div>
+                </div>
             </div>
         </div>
     </footer>
-
     <!-- FOOTER: END -->
 </body>
 </html>
