--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <!-- TOP PRODUCTS: START -->
-    <div class="container">
+    <div class="container my-5">
         <h1>TOP PRODUCTS</h1>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt tellus bibendum lorem interdum, vitae lobortis risus volutpat. Integer porta dui sit amet magna faucibus, auctor pretium augue auctor. Quisque malesuada dolor a cursus pretium. Cras consequat ornare metus vitae commodo. Cras iaculis a arcu id porta. Maecenas malesuada nunc velit, quis posuere elit tincidunt et. Etiam aliquam ac ex ac molestie.
@@ -102,22 +102,22 @@
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-md-left">
-            <div class="row text-md-left">
+        <div class="container text-md-start">
+            <div class="row text-md-start">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
                     </p>
                 </div>
-                <div class="col-md2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
                 </div>
-                <div class="col-md5 col-lg-5 col-xl-5 mx-auto mt-3">
+                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
                     <p>
                         Blk 31, Ngee Ann Polytechnic <br>
@@ -129,12 +129,12 @@
             </div>
             <hr class="mb-4">
             <div class="row align-items-center">
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-6">
                     <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
                     <span style="font-size: 12px;">DESIGNED BY XIAO YAOJIE & SHUQRI SHAIFUDDIN</span>
                 </div>
-                <div class="col-md-5 col-lg-4 mt-3">
-                    <div class="text-center text-md-right">
+                <div class="col-md-6 mt-3">
+                    <div class="text-start text-md-end">
                         <span>
                             <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
                             <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
