--- a/termsofservice.html
+++ b/termsofservice.html
@@ -176,22 +176,22 @@
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-md-left">
-            <div class="row text-md-left">
+        <div class="container text-md-start">
+            <div class="row text-md-start">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
                     </p>
                 </div>
-                <div class="col-md2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
                 </div>
-                <div class="col-md5 col-lg-5 col-xl-5 mx-auto mt-3">
+                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
                     <p>
                         Blk 31, Ngee Ann Polytechnic <br>
@@ -203,12 +203,12 @@
             </div>
             <hr class="mb-4">
             <div class="row align-items-center">
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-6">
                     <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
                     <span style="font-size: 12px;">DESIGNED BY XIAO YAOJIE & SHUQRI SHAIFUDDIN</span>
                 </div>
-                <div class="col-md-5 col-lg-4 mt-3">
-                    <div class="text-center text-md-right">
+                <div class="col-md-6 mt-3">
+                    <div class="text-start text-md-end">
                         <span>
                             <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
                             <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
