--- a/datanotice.html
+++ b/datanotice.html
@@ -18,10 +18,30 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</head><head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- TITLE -->
+    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- NAVIGATION BAR: START -->
@@ -190,22 +210,22 @@
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-md-left">
-            <div class="row text-md-left">
+        <div class="container text-md-start">
+            <div class="row text-md-start">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
                     </p>
                 </div>
-                <div class="col-md2 col-lg-2 col-xl-2 mx-auto mt-3">
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
                     <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
                 </div>
-                <div class="col-md5 col-lg-5 col-xl-5 mx-auto mt-3">
+                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
                     <p>
                         Blk 31, Ngee Ann Polytechnic <br>
@@ -217,12 +237,13 @@
             </div>
             <hr class="mb-4">
             <div class="row align-items-center">
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-6">
                     <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
-                    <span style="font-size: 12px;">DESIGNED BY XIAO YAOJIE & SHUQRI SHAIFUDDIN</span>
+                    <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" style="text-decoration: none;">XIAO YAOJIE</a> &
+                        <a href="https://www.github.com/iirquhs-np" style="text-decoration: none;">SHUQRI SHAIFUDDIN</a></span>
                 </div>
-                <div class="col-md-5 col-lg-4 mt-3">
-                    <div class="text-center text-md-right">
+                <div class="col-md-6 mt-3">
+                    <div class="text-start text-md-end">
                         <span>
                             <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
                             <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
