Created explore page. Minor changes to other files.

--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
                 <ul class="navbar-nav ms-auto text-center ">
-                    <li><a href="explore.html" class="nav-link">Shop</a></li>
+                    <li><a href="#" class="nav-link">Shop</a></li>
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
@@ -107,7 +107,7 @@
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
-                        Singapore's #1 Customisable High Performance PC Builders.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
                     </p>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
