--- a/termsofservice.html
+++ b/termsofservice.html
@@ -54,7 +54,7 @@
 
     <!-- TERMS OF SERVICE: START -->
     <div class="container my-5">
-        <h2><strong>Terms and Conditions</strong></h2>
+        <h2><strong>Terms of Service</strong></h2>
 
         <p>Welcome to COMZONE!</p>
         <p>These terms and conditions outline the rules and regulations for the use of COMZONE's Website, located at github.shuqri.xyz/IDAssignment2.</p>
