Added Hero Banner video.

--- a/explore.html
+++ b/explore.html
@@ -59,7 +59,7 @@
         <div class="row text-center">
             <div class="col-md border p-3 mx-1">
                 <img src="img/explore/aftershock-rapid.png" alt="" class="img-fluid">
-                <h5>Budget Ryzen</h5>
+                <h5>RAPID<br></h5>
                 <div class="d-grid gap-2">
                     <button type="button" class="btn btn-primary">SELECT</button>
                 </div>
