--- a/datanotice.html
+++ b/datanotice.html
@@ -61,11 +61,11 @@
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
                 <ul class="navbar-nav ms-auto text-center ">
-                    <li><a href="#" class="nav-link">Shop</a></li>
+                    <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="#" class="nav-link"><img src="img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
+                    <li><a href="login.html" class="nav-link"><img src="img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
                 </ul>
             </div>
         </nav>
