--- a/explore.html
+++ b/explore.html
@@ -54,61 +54,112 @@
 
 <!-- PRODUCT SELECTION: START -->
 <div class="container my-5">
+    <!-- DESKTOPS -->
     <div class="container mt-5">
-        <h1 class="mb-3 text-center"><strong>DESKTOPS</strong></h1>
-        <div class="row text-center">
-            <div class="col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-rapid.png" alt="" class="img-fluid">
-                <h5>RAPID<br></h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
+        <h1 class="mb-5 text-center"><strong>DESKTOPS</strong></h1>
+        <!-- RAPID SYSTEM -->
+
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-rapid.png" alt="" class="img-fluid p-2">
             </div>
-            <div class="col-md col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid">
-                <h5>Extreme Intel</h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
-            </div>
-            <div class="col-md col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid">
-                <h5>Extreme Ryzen</h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
+            <div class="col-md-8">
+                <h3><strong>RAPID</strong></h3>
+                <p>
+                    Intel® Core™ i3-10105F | 4C/8T <br>
+                    GIGABYTE B560M DS3H <br>
+                    ZOTAC GTX 1650 OC 4GB <br>
+
+                </p>
+                <h5>S$1100.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
             </div>
         </div>
-    </div>
-    <div class="container mt-5">
-        <h1 class="mb-3 text-center"><strong>LAPTOPS</strong></h1>
-        <div class="row text-center">
-            <div class="col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-rapid.png" alt="" class="img-fluid">
-                <h5>Budget Ryzen</h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
+        <hr class="mb-4">
+        <!-- ZEAL SYSTEM -->
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid p-2">
             </div>
-            <div class="col-md col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid">
-                <h5>Extreme Intel</h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
-            </div>
-            <div class="col-md col-md border p-3 mx-1">
-                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid">
-                <h5>Extreme Ryzen</h5>
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary">SELECT</button>
-                </div>
+            <div class="col-md-8">
+                <h3><strong>ZEAL</strong></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu tristique purus, eu egestas urna. Aliquam erat volutpat. Ut mauris elit, hendrerit non nisl nec, malesuada malesuada ipsum. Aenean lacus.
+                </p>
+                <h5>S$1800.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
             </div>
         </div>
+        <hr class="mb-4">
+        <!-- XTREME SYSTEM -->
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid p-2">
+            </div>
+            <div class="col-md-8">
+                <h3><strong>XTREME</strong></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu tristique purus, eu egestas urna. Aliquam erat volutpat. Ut mauris elit, hendrerit non nisl nec, malesuada malesuada ipsum. Aenean lacus.
+                </p>
+                <h5>S$2100.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
+            </div>
+        </div>
+        <hr class="mb-4">
+
     </div>
+    <!-- LAPTOPS -->
     <div class="container mt-5">
-        <h2 class="mb-3"><strong>Need Corporate Solutions?</strong></h2>
-        <h5>Email us at corporate@comzone.sg</h5>
+        <h1 class="mb-5 text-center"><strong>LAPTOPS</strong></h1>
+        <!-- RAPID SYSTEM -->
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-rapid.png" alt="" class="img-fluid p-2">
+            </div>
+            <div class="col-md-8">
+                <h3><strong>RAPID</strong></h3>
+                <p>
+                    Intel® Core™ i3-10105F | 4C/8T <br>
+                    GIGABYTE B560M DS3H <br>
+                    ZOTAC GTX 1650 OC 4GB <br>
+
+                </p>
+                <h5>S$1100.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
+            </div>
+        </div>
+        <hr class="mb-4">
+        <!-- ZEAL SYSTEM -->
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid p-2">
+            </div>
+            <div class="col-md-8">
+                <h3><strong>ZEAL</strong></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu tristique purus, eu egestas urna. Aliquam erat volutpat. Ut mauris elit, hendrerit non nisl nec, malesuada malesuada ipsum. Aenean lacus.
+                </p>
+                <h5>S$1800.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
+            </div>
+        </div>
+        <hr class="mb-4">
+        <!-- XTREME SYSTEM -->
+        <div class="container row">
+            <div class="col-md-4">
+                <img src="img/explore/aftershock-zeal.png" alt="" class="img-fluid p-2">
+            </div>
+            <div class="col-md-8">
+                <h3><strong>XTREME</strong></h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu tristique purus, eu egestas urna. Aliquam erat volutpat. Ut mauris elit, hendrerit non nisl nec, malesuada malesuada ipsum. Aenean lacus.
+                </p>
+                <h5>S$2100.00</h5>
+                <button type="button" class="btn btn-primary">SELECT</button>
+            </div>
+        </div>
+        <hr class="mb-4">
+
     </div>
 </div>
 
