--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="#" class="nav-link"><img src="img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
+                    <li><a href="login.html" class="nav-link"><img src="img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
                 </ul>
             </div>
         </nav>
