--- a/login.html
+++ b/login.html
@@ -50,6 +50,11 @@
     <!-- NAVIGATION BAR: END -->
 
 
+    <!-- LOGIN FORM: START -->
+    <div class="container">
+        <h1>ACCOUNT PAGE</h1>
+    </div>
+    <!-- LOGIN FORM: END -->
 
 
     <!-- FOOTER: START -->
