Minor change to account

--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
 
     <!-- LOGIN FORM: START -->
     <div class="container">
-        <h1>ACCOUNT PAGE</h1>
+        <h1>LOGIN PAGE</h1>
     </div>
     <!-- LOGIN FORM: END -->
 
