Edited Hero Banner.

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     <!-- NAVIGATION BAR: END -->
 
     <!-- HERO BANNER: START -->
-    <header>
-
-        <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
+    <div id="hero-banner">
+        <!-- This div is intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
         <div class="overlay"></div>
       
         <!-- The HTML5 video element that will create the background video on the header -->
@@ -65,12 +64,12 @@
         <div class="container h-100">
           <div class="d-flex h-100 text-center align-items-center">
             <div class="w-100 text-white">
-              <h1 class="display-3">Video Header</h1>
-              <p class="lead mb-0">Using HTML5 Video and Bootstrap</p>
+              <h1 class="display-3">COMZONE</h1>
+              <p class="lead mb-0">Singapore's #1 Customisable High Performance PC Builders.</p>
             </div>
           </div>
         </div>
-      </header>
+    </div>
     <!-- HERO BANNER: END -->
 
 
