--- a/login.html
+++ b/login.html
@@ -17,97 +17,54 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/spinner.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
 <body>
-    <!-- NAVIGATION BAR: START -->
-    <div class="container">
-        <nav class="navbar navbar-expand-sm navbar-light py-2">
-            <a href="index.html" class="navbar-brand"><strong>COM</strong>ZONE</a> <!-- BRAND LOGO -->
-            <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#toggleMobileMenu"
-                    aria-controls="toggleMobileMenu"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-            >
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                <ul class="navbar-nav ms-auto text-center ">
-                    <li><a href="#" class="nav-link">Shop</a></li>
-                    <li><a href="#" class="nav-link">Rewards</a></li>
-                    <li><a href="#" class="nav-link">About</a></li>
-                    <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="#" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    <!-- NAVIGATION BAR: END -->
-
-
     <!-- LOGIN FORM: START -->
-    <div class="container">
-        <h1>LOGIN PAGE</h1>
-    </div>
-    <!-- LOGIN FORM: END -->
-
-
-    <!-- FOOTER: START -->
-    <footer class="bg-dark text-white pt-5 pb-4">
-        <div class="container text-md-start">
-            <div class="row text-md-start">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
-                    </p>
+    <div class="container py-5">
+        <div class="row justify-content-center">
+            <form class="col-lg-6">
+                <h2>Log in</h2>
+                <div class="mb-3">
+                    <label for="loginEmail" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp">
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
+                <div class="mb-4">
+                    <label for="loginPassword" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="loginPassword">
                 </div>
-                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
-                    <h5 class="mb-4 ">CONTACT US</h5>
-                    <p>
-                        Blk 31, Ngee Ann Polytechnic <br>
-                        535 Clementi Rd, Singapore 599489
-                    </p>
-                    <p><a href="#" class="text-white">>EMAIL ADDRESS HERE<</a></p>
-                    <p>>SOCIAL MEDIA LINKS HERE<</p>
-                </div>
-            </div>
-            <hr class="mb-4">
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
-                    <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" style="text-decoration: none;">XIAO YAOJIE</a> &
-                        <a href="https://www.github.com/iirquhs-np" style="text-decoration: none;">SHUQRI SHAIFUDDIN</a></span>
-                </div>
-                <div class="col-md-6 mt-3">
-                    <div class="text-start text-md-end">
-                        <span>
-                            <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
-                            <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
-                        </span>
+                <button type="submit" class="btn btn-primary" id="loginSubmit">Submit</button>
+                <p class="mt-2">Don't have an account? <a href="register.html" class="link-info">Register here</a></p>
+                <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc" style="display: none;">
+                    <div class="ldio-9tisb9ooc7p">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
                     </div>
                 </div>
-            </div>
+                <span id="errorMessage"></span>
+            </form>
         </div>
-    </footer>
-    <!-- FOOTER: END -->
+
+    </div>
+    <!-- LOGIN FORM: END -->
 
 
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="js/account.js"></script>
 </body>
 </html>
