--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
     <!-- LOGIN FORM: START -->
     <div class="container py-5">
         <div class="row justify-content-center">
+            <h1 class="text-center m-5"><strong>COM</strong>ZONE</h1>
             <form class="col-lg-6">
                 <h2>Log in</h2>
                 <div class="mb-3">
@@ -36,7 +37,7 @@
                     <label for="loginPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="loginPassword">
                 </div>
-                <button type="submit" class="btn btn-primary" id="loginSubmit">Submit</button>
+                <button type="submit" class="btn btn-primary" id="loginSubmit">Log in</button>
                 <p class="mt-2">Don't have an account? <a href="register.html" class="link-info">Register here</a></p>
                 <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc" style="display: none;">
                     <div class="ldio-9tisb9ooc7p">
@@ -56,7 +57,6 @@
                 <span id="errorMessage"></span>
             </form>
         </div>
-
     </div>
     <!-- LOGIN FORM: END -->
 
