--- a/termsofservice.html
+++ b/termsofservice.html
@@ -37,12 +37,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="toggleMobileMenu">
-                <ul class="navbar-nav ms-auto text-center ">
-                    <li><a href="#" class="nav-link">Shop</a></li>
+                <ul class="navbar-nav ms-auto text-md-center">
+                    <li><a href="explore.html" class="nav-link">Shop</a></li>
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="#" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
+                    <li><a href="account.html" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
                 </ul>
             </div>
         </nav>
