--- a/explore.html
+++ b/explore.html
@@ -50,18 +50,25 @@
         <h1 class="text-center mt-4">What are you looking for today?</h1>
         <nav class="navbar navbar-expand navbar-light d-flex justify-content-center">
             <div class="navbar-nav text-center">
-                <a class="nav-item nav-link" href="#"><h5>Desktops</h5></a>
-                <a class="nav-item nav-link" href="#"><h5>Laptops</h5></a>
+                <a class="nav-item nav-link" href="#desktops"><h5>Desktops</h5></a>
+                <a class="nav-item nav-link" href="#laptops"><h5>Laptops</h5></a>
             </div>
         </nav>
-        <img class="mx-auto d-block img-responsive" src="assets/img/explore/product-collections.png" alt="Card image cap">
+        <img class="mx-auto d-block img-responsive img-fluid ps-4" src="assets/img/explore/product-collections.png" alt="Card image cap">
         <!-- PRODUCT FILTER: END -->
 
         <!-- PRODUCT SELECTION: START -->
         <div class="container my-5">
             <div class="container">
                 <!-- DESKTOPS -->
-                <h2 class="mb-5 text-center"><strong>DESKTOPS</strong></h2>
+                <h2 id="desktops" class="text-center pt-5"><strong>DESKTOPS</strong></h2>
+                <h5 class="text-center">EXTREME PERFORMANCE | OPEN LOOP COOLING READY | BEAUTIFUL SHOWCASE DESIGN | ATX</h5>
+                <p class="text-center ps-5 pe-5">
+                   Our premium advanced range of custom pcs feature a full range of ultra-high end component options,  
+                   stunning showcase chassis designs, exotic chassis options and even open loop watercooling options for 
+                   you to created your ultimate custom pc masterpiece. 
+                   Change the way you view customizing your own pc forever.
+                </p>
                 <div class="row justify-content-evenly m-4">
                     <!-- RAPID SYSTEM -->
                     <div class="card col-md-3 m-4">
@@ -104,7 +111,12 @@
                     </div>
                 </div>
                 <!-- LAPTOPS -->
-                <h2 class="mb-5 text-center"><strong>LAPTOPS</strong></h2>
+                <h2 id="laptops" class="text-center pt-5"><strong>LAPTOPS</strong></h2>
+                <h5 class="text-center">ULTRA LONG BATTERY LIFE | SUPERSLIM | RTX 30 SERIES</h5>
+                <p class="text-center ps-5 pe-5">
+                    COMZONE Optimal series gaming notebooks aim to deliver the ultimate combination of features and performance at unbeatable pricepoints. 
+                    If you're looking to get the most performance at the best price/performance ratio, our optimal range notebooks deliver in spades.
+                </p>
                 <div class="row justify-content-evenly m-4">
                     <div class="card col-md-3 m-4">
                         <img class="card-img-top pt-3" src="assets/img/explore/aftershock-rapid.png" alt="Card image cap">
