--- a/index.html
+++ b/index.html
@@ -117,7 +117,15 @@
                         535 Clementi Rd, Singapore 599489
                     </p>
                     <p><a href="#" class="text-white">>EMAIL ADDRESS HERE<</a></p>
-                    <p>>SOCIAL MEDIA LINKS HERE<</p>
+                    <div class="d-flex">
+                        <ul>
+                            <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
+                            <li><span class="social-icon social-google"><i class="fa fa-google"></i></span></li>
+                            <li><span class="social-icon social-linkedin"><i class="fa fa-linkedin"></i></span></li>
+                            <li><span class="social-icon social-instagram"><i class="fa fa-instagram"></i></span></li>
+                            <li><span class="social-icon social-twitter"><i class="fa fa-twitter"></i></span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <hr class="mb-4">
