Modified style to not affect all 'ul's.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </p>
                     <p><a href="mailto:s10227932@connect.np.edu.sg" class="text-white text-decoration-none">Email: s10227932@connect.np.edu.sg</a></p>
                     <div class="d-flex">
-                        <ul class="ps-0">
+                        <ul class="social-icon-ul ps-0">
                             <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
                             <li><span class="social-icon social-google"><i class="fa fa-google"></i></span></li>
                             <li><span class="social-icon social-linkedin"><i class="fa fa-linkedin"></i></span></li>
