Completed account creation.

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                         Blk 31, Ngee Ann Polytechnic <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
-                    <p><a href="mailto:s10227932@connect.np.edu.sg" class="text-white text-decoration-none">Email: s10227932@connect.np.edu.sg</a></p>
+                    <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: s10227932@connect.np.edu.sg</a></p>
                     <div class="d-flex">
                         <ul class="social-icon-ul ps-0">
-                            <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
-                            <li><span class="social-icon social-google"><i class="fa fa-google"></i></span></li>
+                            <li><span class="social-icon social-facebook"><i class="fa fa-facebook"><a href="https://www.facebook.com/makeitnp"></a></i></span></li>
+                            <li><span class="social-icon social-google"><i class="fa fa-google"><a href=""></a></i></span></li>
                             <li><span class="social-icon social-linkedin"><i class="fa fa-linkedin"></i></span></li>
                             <li><span class="social-icon social-instagram"><i class="fa fa-instagram"></i></span></li>
                             <li><span class="social-icon social-twitter"><i class="fa fa-twitter"></i></span></li>
