--- a/datanotice.html
+++ b/datanotice.html
@@ -184,8 +184,8 @@
             <li>
                 <p>You may contact our Data Protection Officer if you have any enquiries or feedback on our personal data protection policies and procedures, or if you wish to make any request, in the following manner: </p>
                 <p>
-                    Contact No: +65 9XXXXXXX <br>
-                    Email Address: s10227932@connect.np.edu.sg
+                    Contact No: (+65) 9123 4567 <br>
+                    Email Address: fakedataprotection@comzone.sg
                 </p>
             </li>
         </ol>
