--- a/index.html
+++ b/index.html
@@ -74,35 +74,119 @@
     </div>
     <!-- HERO BANNER: END -->
 
-
-    <!-- TOP PRODUCTS: START -->
-    <div class="container my-5">
-        <h1>TOP PRODUCTS</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt tellus bibendum lorem interdum, vitae lobortis risus volutpat. Integer porta dui sit amet magna faucibus, auctor pretium augue auctor. Quisque malesuada dolor a cursus pretium. Cras consequat ornare metus vitae commodo. Cras iaculis a arcu id porta. Maecenas malesuada nunc velit, quis posuere elit tincidunt et. Etiam aliquam ac ex ac molestie.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt tellus bibendum lorem interdum, vitae lobortis risus volutpat. Integer porta dui sit amet magna faucibus, auctor pretium augue auctor. Quisque malesuada dolor a cursus pretium. Cras consequat ornare metus vitae commodo. Cras iaculis a arcu id porta. Maecenas malesuada nunc velit, quis posuere elit tincidunt et. Etiam aliquam ac ex ac molestie.
-        </p>
-        <p>
-            Pellentesque in lacus tellus. Sed tempus nisi ut tempor facilisis. Donec eu lacinia enim. Duis suscipit felis id nibh condimentum ultricies quis eu velit. Praesent eleifend malesuada arcu quis tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas convallis, dui aliquet tristique dictum, tellus leo dapibus purus, imperdiet tempor mi erat eget mi. Nullam urna tortor, vehicula sit amet ultrices et, porttitor ut leo. Mauris eu odio diam. Morbi maximus ligula sit amet ante accumsan faucibus.
-        </p>
-        <p>
-            Pellentesque in lacus tellus. Sed tempus nisi ut tempor facilisis. Donec eu lacinia enim. Duis suscipit felis id nibh condimentum ultricies quis eu velit. Praesent eleifend malesuada arcu quis tempor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Maecenas convallis, dui aliquet tristique dictum, tellus leo dapibus purus, imperdiet tempor mi erat eget mi. Nullam urna tortor, vehicula sit amet ultrices et, porttitor ut leo. Mauris eu odio diam. Morbi maximus ligula sit amet ante accumsan faucibus.
-        </p>
+    <!-- CATEGORY SECTION: START -->
+    <div class="bg-dark text-white p-5">
+        <h1 class="pt-4 text-center">What are you looking for today?</h1>
+        <div class="container my-5">
+            <div class="row">
+            <a class="col-sm ms-4 me-4 text-decoration-none text-white" href="explore.html#desktops">
+                <img class="mx-auto d-block mb-3" height="200px" src="assets/img/explore/aftershock-zeal.png">
+                <h5 class="mt-4 text-center text-uppercase"><strong>Desktops</strong></h5>
+                <p class="text-center mt-3 ps-4 pe-4">
+                    Our premium advanced range of custom pcs feature a full range of ultra-high end component options,  
+                    stunning showcase chassis designs, exotic chassis options and even open loop watercooling options for 
+                    you to created your ultimate custom pc masterpiece. 
+                    Change the way you view customizing your own pc forever.
+                </p>
+            </a>
+            <a class="col-sm ms-4 me-4 text-decoration-none text-white" href="explore.html#laptops">
+                <img class="mx-auto d-block mb-3" height="200px" src="assets/img/index/aftershock-forge15s.png">
+                <h5 class="mt-4 text-center text-uppercase"><strong>Laptops</strong></h5>
+                <p class="text-center mt-3 ps-4 pe-4">
+                    COMZONE Optimal series gaming notebooks aim to deliver the ultimate combination of features and performance at unbeatable pricepoints. 
+                    If you're looking to get the most performance at the best price/performance ratio, our optimal range notebooks deliver in spades.
+                </p>
+            </div>
+            </a>
+        </div>
+        <button type="button" class="btn btn-light mx-auto d-block"><a class="text-decoration-none text-dark" href="explore.html">Shop All</a></button>
     </div>
-    <!-- TOP PRODUCTS: END -->
+    <!-- CATEGORY SECTION: END -->
 
+    <!-- WHY US SECTION: START -->
+    <h1 class="mt-5 text-center">Our Promise - Why COMZONE?</h1>
+    <div class="container my-5">
+        <div class="row">
+          <div class="col-sm ms-4 me-4">
+            <img class="mx-auto d-block mb-3" src="assets/img/index/why-us-support.png">
+            <h5 class="text-center text-uppercase"><strong>Superior Warranty</strong></h5>
+            <p class="text-center">
+                Our systems are covered by COMZONES's highly renowned aftersales support team. 
+                For desktop PCs, we cover all parts with a 1-for-1 exchange policy. Unlike many other local system builders, 
+                our warranty has a proven track record of excellence.
+            </p>
+          </div>
+          <div class="col-sm ms-4 me-4">
+            <img class="mx-auto d-block mb-3" src="assets/img/index/why-us-performance.png">
+            <h5 class="text-center text-uppercase"><strong>Performance Optimised</strong></h5>
+            <p class="text-center">
+                COMZONE PC selects and uses only the finest components. 
+                We fine tune systems to get the ideal performance in the most demanding scenarios, and you know what you are getting 
+                when you build a boutique system with us.
+            </p>
+          </div>
+          <div class="col-sm ms-4 me-4">
+            <img class="mx-auto d-block mb-3" style="margin-top: 10px;" height="90" src="assets/img/index/why-us-craftmanship.png">
+            <h5 class="text-center text-uppercase"><strong>Quality Craftmanship</strong></h5>
+            <p class="text-center">
+                Every system is hand crafted by our passionate team of system builders, to a level of detail and perfection that defines a Boutique PC.
+                We don't just build PCs, we turn dreams into reality.
+            </p>
+          </div>
+        </div>
+    </div>
+    <!-- WHY US SECTION: END -->
+
+    <!-- VIDEO PLAYER SECTION: START -->
+    <div class="bg-dark text-white">
+        <h1 class="mt-5 pt-5 text-center">What Happens After Checking Out At COMZONE?</h1>
+        <h5 class="text-center text-secondary m-4">Ordered &#187; Built &#187; Tested &#187; Packed &#187; Ready To Ship</h5>
+        <div class="embed-responsive embed-responsive-16by9 pb-4">
+            <iframe class="mx-auto d-block mb-5" width="560" height="315" src="https://www.youtube.com/embed/Va18zfmeaD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    <!-- VIDEO PLAYER SECTION: END -->
+
+    <!-- ENDORSEMENT: START -->
+    <div class="container my-5">
+        <h1 class="text-center">We're Built For The Best</h1>
+        <div class="pro-img-block mx-auto d-block mt-3">
+            <img src="assets/img/index/pro-endorsement-shuqri-xiao.jpg">
+        </div>
+        <div class="pro-text-block mx-auto d-block bg-dark text-white">
+            <h5 class="pt-5 ps-5"><strong>Shuqri Xiao</strong></h5>
+            <p class="ps-5">Professional Apex Legends Player</p>
+        </div>
+        <div class="pro-img-block mx-auto d-block mt-3">
+            <img src="assets/img/index/pro-endorsement-wardell.jpg">
+        </div>
+        <div class="pro-text-block mx-auto d-block bg-dark text-white">
+            <h5 class="pt-5 ps-5"><strong>WARDELL</strong></h5>
+            <p class="ps-5">Professional Twitch Screamer</p>
+        </div>
+    </div>
+    <!-- ENDORSEMENT: END -->
+
+    <!-- TESTIMONIAL: START -->
+    <div class="container my-5">
+        <h1 class="mt-5 pt-5 text-center">Our Customers Love Us</h1>
+        <div class="embed-responsive embed-responsive-16by9 pb-4">
+            <iframe class="mx-auto d-block mb-5" width="560" height="315" src="https://www.youtube.com/embed/Va18zfmeaD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+    <!-- TESTIMONIAL: END -->
 
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-md-start">
             <div class="row text-md-start">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3 ms-0">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
                         Singapore's #1 Customisable High Performance PC Builders.
                     </p>
+                    <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png">
+                    <img height="80px" width="80px" src="assets/img/index/certified-badge.png">
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
@@ -111,13 +195,13 @@
                     <p><a href="#" class="text-white text-decoration-none">About</a></p>
                     <p><a href="#" class="text-white text-decoration-none">Support</a></p>
                 </div>
-                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
+                <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
                     <p>
                         Blk 31, Ngee Ann Polytechnic <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
-                    <p><a href="mailto:s10227932@connect.np.edu.sg" class="text-white text-decoration-none">Email: s10227932@connect.np.edu.sg</a></p>
+                    <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: fake_contact@comzone.sg</a></p>
                     <div class="d-flex">
                         <ul class="ps-0">
                             <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
