Created account page (overview).

--- a/account.html
+++ b/account.html
@@ -49,8 +49,18 @@
     <!-- NAVIGATION BAR: END -->
 
     <div class="container my-5">
-        <h1>ACCOUNT PAGE</h1>
-        <button type="button" class="btn btn-primary" id="account-logout">LOG OUT</button>
+        <div class="mb-5">
+            <h1 class="mb-3 text-center"><strong>My Account Details</strong></h1>
+            <h3 id="account-greeting">Loading...</h3>
+        </div>
+
+        <div id="account-overview">
+            <h5 class="mb-3">Account Overview</h5>
+            <p id="account-points"></p>
+            <p id="account-id"></p>
+            <button type="button" class="btn btn-danger" id="account-logout">LOG OUT</button>
+        </div>
+
     </div>
 
 
