Added validation to register page.

--- a/register.html
+++ b/register.html
@@ -36,6 +36,7 @@
                 <div class="mb-4">
                     <label for="registerPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="registerPassword" required>
+                    <div id="passwordHelp" class="form-text">Minimum password length: 8 characters</div>
                 </div>
                 <div class="mb-3">
                     <label for="registerFirstName" class="form-label">First Name</label>
