Changed default condition when user clicks account button.

--- a/termsofservice.html
+++ b/termsofservice.html
@@ -42,7 +42,7 @@
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="account.html" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
+                    <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
         </nav>
