--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li><a href="#" class="nav-link">Rewards</a></li>
                     <li><a href="#" class="nav-link">About</a></li>
                     <li><a href="#" class="nav-link">Support</a></li>
-                    <li><a href="account.html" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></a></li>
+                    <li id="account-button" class="nav-link"><img src="assets/img/index/user-interface.png" alt="" style="height: 20px;"></li>
                 </ul>
             </div>
         </nav>
@@ -252,6 +252,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/backToTop.js"></script>
 </body>
