Fixed leaderboard sorting.

--- a/rewards.html
+++ b/rewards.html
@@ -52,25 +52,24 @@
 </div>
 <!-- NAVIGATION BAR: END -->
 
+
+<!-- LEADERBOARD: START-->
 <div class="container py-5">
     <h2 class="text-center"><strong>LEADERBOARD</strong></h2>
-    <div class="row text-center justify-content-center">
-        <h5 class="col-2">LOADING...</h5>
-        <div class="col-2">
-            <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc">
-                <div class="ldio-9tisb9ooc7p">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
+    <div class="row justify-content-center">
+        <div id="spinner" class="loadingio-spinner-spinner-2bx6ng5j2dc col-1">
+            <div class="ldio-9tisb9ooc7p">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </div>
     </div>
@@ -86,9 +85,6 @@
         </div>
     </div>
 </div>
-
-<!-- LEADERBOARD: START-->
-
 <!-- LEADERBOARD: END -->
 
 <!-- FOOTER: START -->
